external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/deny_with_expect.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/deny_with_expect.move:11:16
   │
 3 │ #[deny(unused_variable)]
   │        --------------- the lint level is defined here
   ·
11 │     fun denied(a: u64) {
   │                ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/deny_with_expect.move:12:13
   │
 3 │ #[deny(unused_variable)]
   │        --------------- the lint level is defined here
   ·
12 │         let y;
   │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'
